--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -89,6 +89,18 @@ steps:
             set -x
             mkdir -p $$BUILDKITE_BUILD_CHECKOUT_PATH
             shopt -s dotglob  # Else will not copy dotfiles e.g. .buildkite/hooks :o
+
+            echo "---------------------"
+            ls -ld $$BUILDKITE_BUILD_CHECKOUT_PATH/.git || echo no
+            echo "---------------------"
+            ls -ld $$BUILDKITE_BUILD_CHECKOUT_PATH/.git/objects || echo no
+            echo "---------------------"
+            ls -ld $$BUILDKITE_BUILD_CHECKOUT_PATH/.git/objects/pack || echo no
+            echo "---------------------"
+            ls -ld $$BUILDKITE_BUILD_CHECKOUT_PATH/.git/objects/pack/pack* || echo no
+            echo "---------------------"
+
+            (cd $$BUILDKITE_BUILD_CHECKOUT_PATH; git clean -ffxdq)
             cp -rp $MYTMP/aha-flow/* $$BUILDKITE_BUILD_CHECKOUT_PATH
         fi
         echo "--- PRE CHECKOUT HOOK, BDI STEP END"
