--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -84,14 +84,16 @@ steps:
             git clone $$BUILDKITE_REPO $MYTMP/aha-flow; cd $MYTMP/aha-flow
             git checkout $$BUILDKITE_COMMIT || git checkout remotes/origin/no-heroku
             set +x
+
+            echo "Checkout full repo, submodules and all"
             source .buildkite/bin/custom-checkout.sh
 
             echo "Copy aha clone to checkout path so bk will find local post-checkout etc."
-            set -x
             mkdir -p $$BUILDKITE_BUILD_CHECKOUT_PATH
             shopt -s dotglob  # Else will not copy dotfiles e.g. .buildkite/hooks :o
             (cd $$BUILDKITE_BUILD_CHECKOUT_PATH; git clean -ffxdq)
-            cp -rfp $MYTMP/aha-flow/* $$BUILDKITE_BUILD_CHECKOUT_PATH
+            echo "cp -rfp $MYTMP/aha-flow/* $$BUILDKITE_BUILD_CHECKOUT_PATH"
+                  cp -rfp $MYTMP/aha-flow/* $$BUILDKITE_BUILD_CHECKOUT_PATH
         fi
         echo "--- PRE CHECKOUT HOOK, BDI STEP END"
 
