--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -7,7 +7,7 @@ env:
   # MYTMP: /var/lib/buildkite-agent/builds/tmp
   # CHECKOUT: $$MYTMP/aha-flow-$$BUILDKITE_BUILD_NUMBER-custom-checkout.sh
 
-  CHECKOUT: $MYTMP/aha-flow/.buildkite/bin/custom-checkout.sh
+  # CHECKOUT: $MYTMP/aha-flow/.buildkite/bin/custom-checkout.sh
 
 steps:
 
@@ -74,27 +74,44 @@ steps:
         # MYTMP=/var/lib/buildkite-agent/builds/tmp/$BUILDKITE_BUILD_NUMBER
         # If MYTMP exists, we have valid clone from current build
         # if [ -e $CHECKOUT ]; then
-        if [ "" ]; then
-            # (If CHECKOUT exists, MYTMP exists.)
-            echo "Found pre-existing build clone, use that for checkout"
-            echo source $CHECKOUT; source $CHECKOUT
-        else
-            echo "Build a new MYTMP (prev step built MYTMP on a different machine maybe)"
-            set -x
-            git clone $$BUILDKITE_REPO $MYTMP/aha-flow; cd $MYTMP/aha-flow
-            git checkout $$BUILDKITE_COMMIT || git checkout remotes/origin/no-heroku
-            set +x
 
-            echo "Checkout full repo, submodules and all"
-            source .buildkite/bin/custom-checkout.sh
+        # NO MORE MYTMP!!!
+        # 
+        # 
+        # #         if [ "" ]; then
+        # #             # (If CHECKOUT exists, MYTMP exists.)
+        # #             echo "Found pre-existing build clone, use that for checkout"
+        # #             echo source $CHECKOUT; source $CHECKOUT
+        # #         else
+        # 
+        #             echo "Build a new MYTMP (prev step built MYTMP on a different machine maybe)"
+        #             set -x
+        #             git clone $$BUILDKITE_REPO $MYTMP/aha-flow; cd $MYTMP/aha-flow
+        #             git checkout $$BUILDKITE_COMMIT || git checkout remotes/origin/no-heroku
+        #             set +x
+        # 
+        #             echo "Checkout full repo, submodules and all"
+        #             source .buildkite/bin/custom-checkout.sh
+        # 
+        #             echo "Copy aha clone to checkout path so bk will find local post-checkout etc."
+        #             mkdir -p $$BUILDKITE_BUILD_CHECKOUT_PATH
+        #             shopt -s dotglob  # Else will not copy dotfiles e.g. .buildkite/hooks :o
+        #             (cd $$BUILDKITE_BUILD_CHECKOUT_PATH; git clean -ffxdq)
+        #             echo "cp -rfp $MYTMP/aha-flow/* $$BUILDKITE_BUILD_CHECKOUT_PATH"
+        #                   cp -rfp $MYTMP/aha-flow/* $$BUILDKITE_BUILD_CHECKOUT_PATH
 
-            echo "Copy aha clone to checkout path so bk will find local post-checkout etc."
-            mkdir -p $$BUILDKITE_BUILD_CHECKOUT_PATH
-            shopt -s dotglob  # Else will not copy dotfiles e.g. .buildkite/hooks :o
-            (cd $$BUILDKITE_BUILD_CHECKOUT_PATH; git clean -ffxdq)
-            echo "cp -rfp $MYTMP/aha-flow/* $$BUILDKITE_BUILD_CHECKOUT_PATH"
-                  cp -rfp $MYTMP/aha-flow/* $$BUILDKITE_BUILD_CHECKOUT_PATH
-        fi
+        # NO MORE MYTMP!!!
+
+        echo "+++ Clone aha directly to $$BUILDKITE_BUILD_CHECKOUT_PATH
+        mkdir -p $$BUILDKITE_BUILD_CHECKOUT_PATH
+        (cd $$BUILDKITE_BUILD_CHECKOUT_PATH; git clean -ffxdq)
+        git clone $$BUILDKITE_REPO $$BUILDKITE_BUILD_CHECKOUT_PATH
+        cd $$BUILDKITE_BUILD_CHECKOUT_PATH
+        git checkout $$BUILDKITE_COMMIT || git checkout remotes/origin/no-heroku
+
+        echo "Checkout full repo, submodules and all"
+        source .buildkite/bin/custom-checkout.sh
+
         echo "--- PRE CHECKOUT HOOK, BDI STEP END"
 
 
@@ -193,20 +210,43 @@ steps:
         pre-checkout: |
           echo "+++ PRE CHECKOUT HOOK, OIT STEP BEGIN"
 
-          # MYTMP=/var/lib/buildkite-agent/builds/tmp/$BUILDKITE_BUILD_NUMBER
-          # If MYTMP exists, we have valid clone from current build
-          if [ ! -e $MYTMP ]; then
-              echo "Build a new MYTMP (prev step built MYTMP on a different machine maybe)"
-              set -x
-              git clone $$BUILDKITE_REPO $MYTMP/aha-flow; cd $MYTMP/aha-flow
-              git checkout $$BUILDKITE_COMMIT || git checkout remotes/origin/no-heroku
-          fi
-          echo "Copy aha clone to checkout path so bk will find local post-checkout etc."
-          set -x
+          #           # MYTMP=/var/lib/buildkite-agent/builds/tmp/$BUILDKITE_BUILD_NUMBER
+          #           # If MYTMP exists, we have valid clone from current build
+          #           if [ ! -e $MYTMP ]; then
+          #               echo "Build a new MYTMP (prev step built MYTMP on a different machine maybe)"
+          #               set -x
+          #               git clone $$BUILDKITE_REPO $MYTMP/aha-flow; cd $MYTMP/aha-flow
+          #               git checkout $$BUILDKITE_COMMIT || git checkout remotes/origin/no-heroku
+          #           fi
+          #           echo "Copy aha clone to checkout path so bk will find local post-checkout etc."
+          #           set -x
+          #           mkdir -p $$BUILDKITE_BUILD_CHECKOUT_PATH
+          #           shopt -s dotglob  # Else will not copy dotfiles e.g. .buildkite/hooks :o
+          #           cp -rp $MYTMP/aha-flow/* $$BUILDKITE_BUILD_CHECKOUT_PATH
+
+          # NO MORE MYTMP!!!
+
+          echo "+++ Clone aha directly to $$BUILDKITE_BUILD_CHECKOUT_PATH
           mkdir -p $$BUILDKITE_BUILD_CHECKOUT_PATH
-          shopt -s dotglob  # Else will not copy dotfiles e.g. .buildkite/hooks :o
-          cp -rp $MYTMP/aha-flow/* $$BUILDKITE_BUILD_CHECKOUT_PATH
+          (cd $$BUILDKITE_BUILD_CHECKOUT_PATH; git clean -ffxdq)
+          git clone $$BUILDKITE_REPO $$BUILDKITE_BUILD_CHECKOUT_PATH
+          cd $$BUILDKITE_BUILD_CHECKOUT_PATH
+          git checkout $$BUILDKITE_COMMIT || git checkout remotes/origin/no-heroku
+
+
+
           echo "--- PRE CHECKOUT HOOK, OIT STEP END"
+
+
+
+
+
+
+
+
+
+
+
 
 
 #           set -x
